# zust

./: .gitattributes  .gitignore  LICENSE.txt  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
public/: splash.html
src/: App.css  App.tsx  Logic.tsx  MenuButton.tsx  Notifications.tsx  ZapretUtils.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bypass.rs  lib.rs  main.rs  settings.rs  tauri.rs  utils.rs
src-tauri/src/bypass/: hosts.rs  proxies.rs  zapret.rs
src-tauri/zapret/lists/: list-general.txt
src-tauri/zapret/strategies/: Zust Special 1.zapret  general (ALT).zapret  general (ALT10).zapret  general (ALT11).zapret  general (ALT2).zapret  general (ALT3).zapret  general (ALT4).zapret  general (ALT5).zapret  general (ALT6).zapret  general (ALT7).zapret  general (ALT8).zapret  general (ALT9).zapret  general (FAKE TLS AUTO ALT).zapret  general (FAKE TLS AUTO ALT2).zapret  general (FAKE TLS AUTO ALT3).zapret  general (FAKE TLS AUTO).zapret  general (SIMPLE FAKE ALT).zapret  general (SIMPLE FAKE ALT2).zapret  general (SIMPLE FAKE).zapret  general.zapret
src/modals/: ConvertModal.tsx  HostsModal.tsx  IpsetModal.tsx  LegacyModal.tsx  NewsModal.tsx  ProxyModal.tsx  ResolverModal.tsx  StrategyModal.tsx  useModalAnimation.tsx
src/pages/: Credits.tsx  Editor.tsx  Extra.tsx  Home.tsx  Settings.tsx
zapret/ipset-configs/: roblox.txt
zapret/lists/: ipset-any-hide.txt  list-exclude.txt
zapret/strategies/: general (ALT).zapret  general (ALT4).zapret  (+4 more)
(+1 files in other folders)
