[package]
name = "zust"
version = "1.1.2"
description = "Zapret, based on rUST."
authors = ["f1zzen"]
edition = "2024"

[lib]
name = "zust_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3.0.6"

[dependencies]
is_elevated = "0.1.2"
tauri = { version = "2", features = ["tray-icon", "image", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
process_list = "0.2.1"
winreg = "0.55.0"
runas = "1.2"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
regex = "1.12.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.3.7"
md-5 = "0.10.6"
hex = "0.4.3"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
